se suben fuentes de banistmo v19.1.1_banistmo

--- a/A2OYD_Servicios_API/A2OYD_Servicios_API/A2OYD_Servicios_API.csproj
+++ b/A2OYD_Servicios_API/A2OYD_Servicios_API/A2OYD_Servicios_API.csproj
@@ -21,11 +21,9 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <Optimize>false</Optimize>
-  </PropertyGroup>
-
   <ItemGroup>
+    <Folder Include="Models\DTO\Entidades\" />
+    <Folder Include="Parametros\Maestros\" />
     <Folder Include="ValidacionesPersonalizadas\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
